Kube-manifest/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fastapi
  name: fastapi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  strategy: {}
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - image: ykadi/datascientestapi:v.168.0
          name: fastapi
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
