Kube-manifest/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi
  name: fastapi
  namespace: standard
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: fastapi
status:
  loadBalancer: {}
