Kube-manifest/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin
  name: pgadmin
  namespace: standard
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    app: pgadmin
status:
  loadBalancer: {}
